<resources>
    <string name="app_name">Examen2</string>
    <string name="movies">Movies</string>
    <string name="user">User</string>
    <string name="cine">Cine</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="my_shopping">My shopping</string>
    <string name="my_cards">My cards</string>
    <string name="log_out">LOG OUT</string>
    <string name="schedule">Schedule</string>
    <string name="synopsis">Synopsis</string>
    <string name="select_your_tickects">Select your tickects</string>
    <string name="normal">Normal 7,70€</string>
    <string name="_13">-13 years 5€</string>
    <string name="universitary">Universitary 5.90€</string>
    <string name="_65">+65 years 3.50€</string>
    <string name="default_cant">0</string>
    <string name="pay">Pay</string>
    <string name="total">Total</string>
    <string name="screen">Screen</string>
    <string name="select_seat">Select Seat</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="continuar">Continue</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">PayPal</string>
    <string name="bizum">Bizum</string>
    <string name="reserve">Reserve</string>
    <string name="retry">Retry</string>
    <string name="top_10">TOP 10</string>
    <string name="search">Search</string>
    <string name="gener">Gener</string>
    <string name="detail">Purchase details</string>
    <string name="name">CineAragón</string>
    <string name="add_user">Add user</string>
    <string name="nameUser">Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="add">Add</string>
    <string name="fail_detail">The purchase was made from another device</string>
    <string name="occupied">Occupied</string>
    <string name="free">Free</string>
    <string name="selected">Selected</string>
</resources>