<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".usuarios.addUsuario.AddUsuarioFragment">

    <LinearLayout
        android:id="@+id/fragment_add_usuario_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/design_default_color_primary">

        <TextView
            android:id="@+id/fragment_add_usuario_titulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_user"
            android:textSize="35dp"
            android:textColor="@color/white"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_add_usuario_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <LinearLayout
                android:id="@+id/fragment_add_usuario_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="50dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_add_usuario_textinputlayout_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/nameUser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_add_usuario_textinput_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_add_usuario_layout_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="50dp"
                android:layout_below="@id/fragment_add_usuario_layout_name">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_add_usuario_textinputlayout_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/surname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_add_usuario_textinput_apellidos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_add_usuario_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="50dp"
                android:layout_below="@id/fragment_add_usuario_layout_apellidos">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_add_usuario_textinputlayout_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_add_usuario_textinput_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_add_usuario_layout_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="50dp"
                android:layout_below="@id/fragment_add_usuario_layout_email">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_add_usuario_textinputlayout_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_add_usuario_textinput_pass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_add_usuario_layout_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="50dp"
                android:layout_below="@id/fragment_add_usuario_layout_pass">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_add_usuario_textinputlayout_pass2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/repeat_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_add_usuario_textinput_pass2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_add_usuario_layout_button"
                android:layout_marginHorizontal="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@id/fragment_add_usuario_layout_pass2">
                <Button
                    android:id="@+id/fragment_add_riders_button_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="30dp"/>
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>